Fix padding on mobile

--- a/src/spellbot/web/templates/record.css
+++ b/src/spellbot/web/templates/record.css
@@ -293,7 +293,7 @@ table thead th .sort .arrow {
     border-top: none;
   }
   table tbody td {
-    padding: 0.25rem 0;
+    padding: 0.5rem 0.75rem;
   }
   table tbody td::before {
     content: attr(data-label);
